--- a/soccer-league/src/main/webapp/WEB-INF/web.xml
+++ b/soccer-league/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,12 @@
 		<description></description>
 		<servlet-class>comm.example.view.SuccessServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>AddLeagueViewServlet</servlet-name>
+		<display-name>AddLeagueViewServlet</display-name>
+		<description></description>
+		<servlet-class>comm.example.view.AddLeagueServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>ListLeagueServlet</servlet-name>
 		<url-pattern>/list_leagues.view</url-pattern>
@@ -43,6 +49,10 @@
 	<servlet-mapping>
 		<servlet-name>SuccessServlet</servlet-name>
 		<url-pattern>/success.view</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AddLeagueViewServlet</servlet-name>
+		<url-pattern>/add_league.view</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 
