--- a/crm-crud/src/main/webapp/WEB-INF/web.xml
+++ b/crm-crud/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,8 @@
-<?xml version="1.0"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-                         "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
- <display-name>Archetype Created Web Application</display-name>
- <servlet>
-  <servlet-name>ListServlet</servlet-name>
-  <servlet-class>comm.example.controller.ListCustomerController</servlet-class>
- </servlet>
- <servlet-mapping>
-  <servlet-name>ListServlet</servlet-name>
-  <url-pattern>/list.do</url-pattern>
- </servlet-mapping>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  <display-name>mypro</display-name>
+  <welcome-file-list>
+
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
