--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+# serivce name
+spring.application.name=image-service
+# port
 server.port=0
-spring.application.name=customer-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
+# eureka server url
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
