--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # serivce name
-spring.application.name=image-service
+spring.application.name=customer-service
 # port
 server.port=0
 # eureka server url
