--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port= 0
 
 spring.application.name= user-service
   
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+spring.cloud.config.uri= http://localhost:8765/
