--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server.port= 8010
-
+server.port= 0
 spring.application.name= user-service
-  
 spring.cloud.config.uri= http://localhost:8765/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
